# osmotool

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/osmotool/: __main__.py  download.py  functions.py  handle_args.py  output.py  quantifier.py  runners.py  utils.py
tests/: conftest.py  test_download.py  test_output.py  test_quantifier.py
