[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "osmotool"
dynamic = ["version"]
description = "Screen osmoadaptation genes in metagenomic datasets using DIAMOND"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
osmotool = "osmotool.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# version derived from git tags (e.g. v0.1.0 → 0.1.0)
